<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Guenther Hoelzl, Shawn Brown

    This file is part of MINDdroid.
  
    MINDdroid is free software: you can redistribute it and/or modify it under
    the terms of the GNU General Public License as published by the Free Software
    Foundation, either version 3 of the License, or (at your option) any later
    version.
  
    MINDdroid is distributed in the hope that it will be useful, but WITHOUT ANY
    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
    A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  
    You should have received a copy of the GNU General Public License along with
    MINDdroid. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <TextView
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="left"
            android:linksClickable="true"
            android:text="@string/about_general"
            android:textSize="6pt" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/icon" />
    </LinearLayout>

    <Button
        android:id="@+id/AboutOKbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_ok"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="left"
        android:linksClickable="true"
        android:paddingTop="5dp"
        android:text="@string/about_license_gpl"
        android:textSize="6pt" />

</LinearLayout>