<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/ImageViewMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewMain"
            android:layout_width="fill_parent"
            android:layout_height="116dp"
            android:text="@string/hello" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/btnUpLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/forthleftbtn"
                    android:src="@drawable/arrow_up" />

                <LinearLayout
                    android:id="@+id/LinearLayout01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnUpRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/forthrightbtn"
                    android:src="@drawable/arrow_up" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/btnDownLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:contentDescription="@string/backleftbtn"
                    android:src="@drawable/arrow_down" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnIR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/square_ir" />

                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnDownRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/backrightbtn"
                    android:src="@drawable/arrow_down" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</merge>
